--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="hero-content">
                 <h1>Unvaxxed $SPRM</h1>
-                <p class="subtitle">The world's most valuable asset</p></div>
+                <p class="subtitle">The world's most valuable asset</p>
                 <div class="cta-buttons">
                     <a href="https://t.me/unvaxxedsprm" class="cta-primary">Join Telegram</a>
                 </div>
@@ -51,7 +51,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p> Unvaxxed $SPRM is a groundbreaking meme token on the Solana blockchain, launching on December 21st, 2024, at 1 PM EST. And it's way more than that. It's a movement. It's a statement of purity. It's a statement of commitment to Truth. To Integrity. To Authenticity. By holding $SPRM, we can put an end to the whole concept of corruption. The whole market is filled with junk. It's leaking everywhere. Here, we bring back the gold standard.
-                      A meme so potent it can get your wallet pregnant. This is the power of $SPRM! </p></div>
+                      A meme so potent it can get your wallet pregnant. This is the power of $SPRM! </p>
                     <div class="about-social">
                         <a href="https://t.me/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-telegram"></i>
@@ -78,13 +78,13 @@
 
         <section class="funny-section">
             <h2>Our goal is to unvax people not simply speak to the unvaxxed</h2>
-            <p>We are here to provide humanity with the tools to unvax the countless people who were lied to, manipulated and coerced. This is about unvaxxing yourself, about detoxing your vessel so purity can emerge.</p></div>
-            <div class="tokenomics-grid">
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: first come, first served."</p></div>
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM…a whole new way to make it rain"</p></div>
+            <p>We are here to provide humanity with the tools to unvax the countless people who were lied to, manipulated and coerced. This is about unvaxxing yourself, about detoxing your vessel so purity can emerge.</p>
+            <div class="capsules">
+                <p class="capsule alternate">"Unvaxxed $SPRM: first come, first served."</p>
+                <p class="capsule">"Unvaxxed $SPRM…a whole new way to make it rain"</p>
                 <img src="https://i.imgur.com/L8B8Dst.jpg" alt="Meme1" class="meme">
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM = Be fertile, not futile"</p></div>
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: more HODL = more cuddle"</p></div>
+                <p class="capsule alternate">"Unvaxxed $SPRM = Be fertile, not futile"</p>
+                <p class="capsule">"Unvaxxed $SPRM: more HODL = more cuddle"</p>
                 <img src="Main/UnvaxxedSPRM/Images/meme2.png" alt="Meme 2" class="meme">
             </div>
         </section>
@@ -94,15 +94,15 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <h3>Prelaunch</h3>
-                    <p>We are here. Building awareness, building momentum. Creating a detox protocool. Getting the Telegram with as many members as we can. Creating all sorts of memes.</p></div>
+                    <p>We are here. Building awareness, building momentum. Creating a detox protocool. Getting the Telegram with as many members as we can. Creating all sorts of memes.</p>
                 </div>
                 <div class="timeline-item">
                     <h3>Launch</h3>
-                    <p>December 21st 2024 1pm EST we do the Genesis Drop. Token creation is livestream, fair launch on pump.fun</p></div>
+                    <p>December 21st 2024 1pm EST we do the Genesis Drop. Token creation is livestream, fair launch on pump.fun</p>
                 </div>
                 <div class="timeline-item">
                     <h3>The Future</h3>
-                    <p>Saving humanity by reaching a $100M market cap!</p></div>
+                    <p>Saving humanity by reaching a $100M market cap!</p>
                 </div>
             </div>
         </section>
@@ -110,10 +110,10 @@
         <section class="funny-section">
             <img src="Main/UnvaxxedSPRM/Images/meme3.png" alt="Meme 3" class="meme">
             <h2>Who said we can't have fun while saving the world?</h2>
-            <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p></div>
-            <div class="tokenomics-grid">
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: Best liquidity in the market"</p></div>
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"76% of men holding Unvaxxed $SPRM report stronger erections"</p></div>
+            <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
+            <div class="capsules">
+                <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
+                <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
                 <img src="Main/UnvaxxedSPRM/Images/meme4.png" alt="Meme 4" class="meme">
             </div>
         </section>
@@ -127,27 +127,27 @@
                 <div class="tokenomics-item">
                     <i class="fas fa-lock"></i>
                     <h3>Protected</h3>
-                    <p>Fair Launch. Dev won't dump his load on you. This is because we actually believe in our project and our cause, unlike 99.99% shit coins launched on pump.fun everyday.</p></div>
+                    <p>Fair Launch. Dev won't dump his load on you. This is because we actually believe in our project and our cause, unlike 99.99% shit coins launched on pump.fun everyday.</p>
                 </div>
                 <div class="tokenomics-item">
                     <i class="fas fa-users"></i>
                     <h3>Wallet Distribution of Team Wallets</h3>
-                    <p>Initial buy amount: 8 SOL divided in 4 wallets. Dev 1, Dev 2, Marketing, Giveaways.</p></div>
+                    <p>Initial buy amount: 8 SOL divided in 4 wallets. Dev 1, Dev 2, Marketing, Giveaways.</p>
                 </div>
                 <div class="tokenomics-item">
                     <i class="fas fa-chart-line"></i>
                     <h3>Growth Tactics</h3>
-                    <p>Everybody HODL their seeds, thus the seed bank grows continuously. We have many incentives and challenges to reward those who help us grow.</p></div>
+                    <p>Everybody HODL their seeds, thus the seed bank grows continuously. We have many incentives and challenges to reward those who help us grow.</p>
                 </div>
             </div>
         </section>
 <section class="funny-section">
     <img src="Main/UnvaxxedSPRM/Images/meme3.jpg" alt="Meme 3" class="meme">
     <h2>Who said we can't have fun while saving the world?</h2>
-    <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p></div>
-    <div class="tokenomics-grid">
-        <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: Best liquidity in the market"</p></div>
-        <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"76% of men holding Unvaxxed $SPRM report stronger erections"</p></div>
+    <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
+    <div class="capsules">
+        <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
+        <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
         <img src="Main/UnvaxxedSPRM/Images/meme5.webp" alt="Meme 5" class="meme">
     </div>
 </section>
@@ -157,25 +157,25 @@
     <div class="timeline">
         <div class="timeline-item">
             <h3>#1: No SPILL HODLER event</h3>
-            <p>5 million $SPRM tokens will be awarded amongst all the people who HODL their precious seed for 30 full days, starting on the Genesis Drop. To qualify it is pretty simple: Do not leak your $SPRM for 30 days. Aka... DON'T SELL. Those who fulfill this challenge will be extremely happy in all possible ways.</p></div>
+            <p>5 million $SPRM tokens will be awarded amongst all the people who HODL their precious seed for 30 full days, starting on the Genesis Drop. To qualify it is pretty simple: Do not leak your $SPRM for 30 days. Aka... DON'T SELL. Those who fulfill this challenge will be extremely happy in all possible ways.</p>
         </div>
         <div class="timeline-item">
             <h3>#2: Giveaway Wallet</h3>
-            <p>We also have a special allocation in the Giveaway wallet. 15 Million tokens are locked until the market cap reaches $100M, in which case these tokens will be used to finance a health-related project in its entirety. The community will begin voting on what this project is upon reaching $5M market cap.</p></div>
+            <p>We also have a special allocation in the Giveaway wallet. 15 Million tokens are locked until the market cap reaches $100M, in which case these tokens will be used to finance a health-related project in its entirety. The community will begin voting on what this project is upon reaching $5M market cap.</p>
         </div>
         <div class="timeline-item">
             <h3>#3: Challenges and Events</h3>
-            <p>All throughout the first 30 days of launch, challenges, activities, events, etc. will be played and give rewards in $SPRM and $SOL.</p></div>
+            <p>All throughout the first 30 days of launch, challenges, activities, events, etc. will be played and give rewards in $SPRM and $SOL.</p>
         </div>
         <div class="timeline-item">
             <h3>#4: Community Engagement</h3>
-            <p>30 days in, 1 million tokens will be awarded to the most active community member, voted by the community. So spread these memes, do some noise, and let's take $SPRM to the egg!</p></div>
+            <p>30 days in, 1 million tokens will be awarded to the most active community member, voted by the community. So spread these memes, do some noise, and let's take $SPRM to the egg!</p>
         </div>
     </div>
-    <div class="tokenomics-grid">
-        <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM swims harder than Lia Thomas"</p></div>
+    <div class="capsules">
+        <p class="capsule alternate">"Unvaxxed $SPRM swims harder than Lia Thomas"</p>
         <img src="Main/UnvaxxedSPRM/Images/meme6.jpg" alt="Meme 6" class="meme">
-        <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Research shows that men aged 45-55 who hold Unvaxxed $SPRM report no longer needing Viagra"</p></div>
+        <p class="capsule">"Research shows that men aged 45-55 who hold Unvaxxed $SPRM report no longer needing Viagra"</p>
     </div>
 </section>
 
@@ -191,18 +191,18 @@
     </ol>
   <a href="https://phantom.com/download" class="button">Get Phantom</a>
     <a href="https://t.me/BullxBetaBot?start=access_6TD0R5G5EMC:same" class="button">Get Bullx</a>
-    <div class="tokenomics-grid">
-        <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Get banked… $SPRM Banked."</p></div>
+    <div class="capsules">
+        <p class="capsule alternate">"Get banked… $SPRM Banked."</p>
         <img src="Main/UnvaxxedSPRM/Images/meme7.jpg" alt="Meme 7" class="meme">
-        <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM is the world’s most valuable asset…trust the $cience."</p></div>
+        <p class="capsule">"Unvaxxed $SPRM is the world’s most valuable asset…trust the $cience."</p>
     </div>
     
 </section>
 
 <section id="detox-protocol" class="detox-protocol">
     <h2>Detox Protocol</h2>
-    <p>The first step is to HOLD $SPRM. Simply by hodling $SPRM, you are receiving the quantum healing frequencies that were activated upon the token creation to purify all the holders from vax-related toxins. Like a subscription to a permanent energetic hospital. This is why our $SPRM will always win the race.</p></div>
-    <p>Next step is TBD as we accumulate data on the best protocols out there. Have a suggestion? Make sure to leave it in the Telegram!</p></div>
+    <p>The first step is to HOLD $SPRM. Simply by hodling $SPRM, you are receiving the quantum healing frequencies that were activated upon the token creation to purify all the holders from vax-related toxins. Like a subscription to a permanent energetic hospital. This is why our $SPRM will always win the race.</p>
+    <p>Next step is TBD as we accumulate data on the best protocols out there. Have a suggestion? Make sure to leave it in the Telegram!</p>
     <img src="Main/UnvaxxedSPRM/Images/hero.bg.jpg" alt="Meme 7" class="meme">
 </section>
 
@@ -219,8 +219,8 @@
 
     <footer>
         <div class="footer-content">
-            <p>&copy; Unvaxxed $SPRM, All rights reserved.</p></div>
-            <p class="disclaimer">None of this is financial or health advice. All content is for ENTERTAINMENT PURPOSES ONLY.</p></div>
+            <p>&copy; Unvaxxed $SPRM, All rights reserved.</p>
+            <p class="disclaimer">None of this is financial or health advice. All content is for ENTERTAINMENT PURPOSES ONLY.</p>
         </div>
     </footer>
     <script src="script.js"></script>
