--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -79,12 +79,12 @@
         <section class="funny-section">
             <h2>Our goal is to unvax people not simply speak to the unvaxxed</h2>
             <p>We are here to provide humanity with the tools to unvax the countless people who were lied to, manipulated and coerced. This is about unvaxxing yourself, about detoxing your vessel so purity can emerge.</p>
- <div class="tokenomics-grid">
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: first come, first served."</p></div>
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM…a whole new way to make it rain"</p></div>
-                <img src="meme1.jpg" alt="Meme1" class="meme">
-               <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM = Be fertile, not futile"</p></div>
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: more HODL = more cuddle"</p></div>
+            <div class="capsules">
+                <p class="capsule alternate">"Unvaxxed $SPRM: first come, first served."</p>
+                <p class="capsule">"Unvaxxed $SPRM…a whole new way to make it rain"</p>
+                <img src="https://i.imgur.com/L8B8Dst.jpg" alt="Meme1" class="meme">
+                <p class="capsule alternate">"Unvaxxed $SPRM = Be fertile, not futile"</p>
+                <p class="capsule">"Unvaxxed $SPRM: more HODL = more cuddle"</p>
                 <img src="Main/UnvaxxedSPRM/Images/meme2.png" alt="Meme 2" class="meme">
             </div>
         </section>
