--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -85,9 +85,11 @@
                   </div>    
                 <img src="https://i.imgur.com/L8B8Dst.jpg" alt="Meme1" class="meme">
                 <img src="https://i.imgur.com/sgH4XsO.png" alt="Meme11" class="meme">
-                <p class="capsule alternate">"Unvaxxed $SPRM = Be fertile, not futile"</p>
-                <p class="capsule">"Unvaxxed $SPRM: more HODL = more cuddle"</p>
-                <img src="Main/UnvaxxedSPRM/Images/meme2.png" alt="Meme 2" class="meme">
+                <img src="https://imgur.com/fglIi9x.jpg" alt="Meme2" class="meme">
+             <div class="tokenomics-grid">
+                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>Unvaxxed $SPRM = Be fertile, not futile"</p></div>
+                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: more HODL = more cuddle"</p></div>
+                  </div>  
             </div>
         </section>
 
