--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -112,13 +112,14 @@
         </section>
 
         <section class="funny-section">
-            <img src="Main/UnvaxxedSPRM/Images/meme3.png" alt="Meme 3" class="meme">
+          <img src="https://imgur.com/undefined.jpg" alt="Meme3" class="meme">
             <h2>Who said we can't have fun while saving the world?</h2>
             <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
             <div class="capsules">
                 <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
                 <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
-                <img src="Main/UnvaxxedSPRM/Images/meme4.png" alt="Meme 4" class="meme">
+              <img src="https://imgur.com/ePOz0no.jpg" alt="Meme4" class="meme">
+
             </div>
         </section>
 
@@ -146,13 +147,13 @@
             </div>
         </section>
 <section class="funny-section">
-    <img src="Main/UnvaxxedSPRM/Images/meme3.jpg" alt="Meme 3" class="meme">
+    <img src="https://imgur.com/LnXZMNz.jpg" alt="Meme5" class="meme">
     <h2>Who said we can't have fun while saving the world?</h2>
     <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
     <div class="capsules">
         <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
         <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
-        <img src="Main/UnvaxxedSPRM/Images/meme5.webp" alt="Meme 5" class="meme">
+       <img src="https://imgur.com/tEdEHya.jpg" alt="Meme6" class="meme">
     </div>
 </section>
 
@@ -178,7 +179,7 @@
     </div>
     <div class="capsules">
         <p class="capsule alternate">"Unvaxxed $SPRM swims harder than Lia Thomas"</p>
-        <img src="Main/UnvaxxedSPRM/Images/meme6.jpg" alt="Meme 6" class="meme">
+        <img src="https://imgur.com/xjmSffO.jpg" alt="Meme7" class="meme">
         <p class="capsule">"Research shows that men aged 45-55 who hold Unvaxxed $SPRM report no longer needing Viagra"</p>
     </div>
 </section>
