--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -112,7 +112,7 @@
         </section>
 
         <section class="funny-section">
-          <img src="https://imgur.com/undefined.jpg" alt="Meme3" class="meme">
+          <img src="https://i.imgur.com/kvMpajQ.png" alt="Meme3" class="meme" style="display: block; margin: 10px auto; text-align: center;">
             <h2>Who said we can't have fun while saving the world?</h2>
             <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
             <div class="capsules">
