--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -83,8 +83,7 @@
                 <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: first come, first served."</p></div>
                 <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM…a whole new way to make it rain"</p></div>
                   </div>    
-                <img src="https://i.imgur.com/L8B8Dst.jpg" alt="Meme1" class="meme">
-                <img src="https://i.imgur.com/sgH4XsO.png" alt="Meme11" class="meme">
+                <img src="https://i.imgur.com/sgH4XsO.png" alt="Meme11" class="meme" style="display: block; margin: 10px auto; text-align: center;">
                       
              <div class="tokenomics-grid">
                 <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>Unvaxxed $SPRM = Be fertile, not futile"</p></div>
