--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -184,8 +184,10 @@
         <li>Use your SOL to buy how many $SPRM you want, then click BUY. Welcome to the club of vitality holders. 🚀 The more you have, the more epic you are. This is a simple fact.</li>
         <li>HODL: Don’t spill your seed by selling too soon. HODLing is how we save humanity! We aim for $100M Market cap in order to have certainty that the genetic lineage of humanity will be forever protected.</li>
     </ol>
-<a href="https://phantom.com/download" class="social-button cta-primary" style="background: #800080; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Phantom</a>
-<a href="https://t.me/BullxBetaBot?start=access_6TD0R5G5EMC:same" class="social-button cta-primary" style="background: #00FF00; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Bullx</a>
+<div style="display: flex; gap: 10px; justify-content: center; align-items: center;">
+    <a href="https://phantom.com/download" class="social-button cta-primary" style="background: #800080; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Phantom</a>
+    <a href="https://t.me/BullxBetaBot?start=access_6TD0R5G5EMC:same" class="social-button cta-primary" style="background: #00FF00; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Bullx</a>
+</div>
 
 
     <div class="capsules">
