--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -191,7 +191,7 @@
 
 
     <div class="capsules">
-        <p class="capsule alternate">"Get banked… $SPRM Banked."</p>
+        <p class="capsule alternate">"Let’s come out the gate with that BCE - Big Coin Energy"</p>
         <img src="https://imgur.com/LnXZMNz.jpg" alt="Meme5" class="meme">
         <p class="capsule">"Unvaxxed $SPRM is the world’s most valuable asset…trust the $cience."</p>
         
