--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -14,9 +14,9 @@
             <div class="logo">Unvaxxed $SPRM</div>
             <div class="nav-links">
                 <a href="#about">About</a>
-                <a href="#story">Our Story</a>
+                <a href="#Roadmap">Roadmap</a>
                 <a href="#tokenomics">Tokenomics</a>
-                <a href="#community">Community</a>
+                <a href="#Buy">Buy</a>
             </div>
         </nav>
     </header>
@@ -92,7 +92,7 @@
             </div>
         </section>
 
-        <section id="story" class="story">
+        <section id="Roadmap" class="Roadmap">
             <h2>Roadmap</h2>
             <div class="timeline">
                 <div class="timeline-item">
