--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -174,7 +174,7 @@
     </div>
 </section>
 
-<section id="how-to-buy" class="how-to-buy">
+<section id="Buy" class="Buy">
     <h2>How to Buy</h2>
     <ol>
         <li>Download Phantom Wallet: This is where your $SPRM lives. Think of it as the ultimate fertility bank, but digital. 🏦</li>
@@ -183,6 +183,7 @@
         <li>When the Genesis Drop begins, connect your wallet to the pump.fun link shared in the livestream, Telegram, and X.</li>
         <li>Use your SOL to buy how many $SPRM you want, then click BUY. Welcome to the club of vitality holders. 🚀 The more you have, the more epic you are. This is a simple fact.</li>
         <li>HODL: Don’t spill your seed by selling too soon. HODLing is how we save humanity! We aim for $100M Market cap in order to have certainty that the genetic lineage of humanity will be forever protected.</li>
+        <li>Important:  Because of how popular this project is, it is quite possible for fake $SPRM to be launched before the Genesis Drop on the 21st. PLEASE DON'T BUY TAINTED $SPRM. This is from people who want to steal your purity. Your Soul. And yur money. Wait for the official Livestream announced on X and on the Telegram.  </li></li>
     </ol>
 <div style="display: flex; gap: 10px; justify-content: center; align-items: center;">
     <a href="https://phantom.com/download" class="social-button cta-primary" style="background: #800080; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Phantom</a>
