--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -11,7 +11,9 @@
 <body>
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">Unvaxxed $SPRM</div>
+            <div class="logo">
+    <img src="path-to-your-logo-image" alt="Unvaxxed $SPRM Logo" />
+</div>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#Roadmap">Roadmap</a>
