--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav-container">
             <div class="logo">
-    <img src="path-to-your-logo-image" alt="Unvaxxed $SPRM Logo" />
+    <img src=https://imgur.com/efk9X7p alt="Unvaxxed $SPRM Logo" />
 </div>
             <div class="nav-links">
                 <a href="#about">About</a>
