--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -12,8 +12,8 @@
     <header class="header">
         <nav class="nav-container">
             <div class="logo">
-    img src="https://i.imgur.com/sgH4XsO.png" alt="Unvaxxed $SPRM">
-</div>
+                <img src="https://i.imgur.com/sgH4XsO.png" alt="Unvaxxed $SPRM"/>
+            </div>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#Roadmap">Roadmap</a>
