--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav-container">
             <div class="logo">
-                <img src="https://imgur.com/gPI4k9h" alt="Unvaxxed $SPRM"/>
+                <img src="Main/UnvaxxedSPRM/Images/logo.png.png" alt="Unvaxxed $SPRM Logo" style="max-height: 50px;">
             </div>
             <div class="nav-links">
                 <a href="#about">About</a>
