--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav-container">
             <div class="logo">
-                <img src="https://imgur.com/a/gPiZdnj" alt="Unvaxxed $SPRM Logo" style="max-height: 50px;">
+                <img src="https://imgur.com/a/QgqRzKP" alt="Unvaxxed $SPRM" style="max-height: 50px;">
             </div>
             <div class="nav-links">
                 <a href="#about">About</a>
