--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -12,7 +12,9 @@
     <header class="header">
         <nav class="nav-container">
             <div class="logo">
-                <img src="https://imgur.com/a/QgqRzKP" alt="Unvaxxed $SPRM" style="max-height: 50px;">
+                <div class="logo">
+      <img src="Main/UnvaxxedSPRM/Images/logo.svg" alt="Unvaxxed $SPRM Logo" width="100" height="100">
+    </div>
             </div>
             <div class="nav-links">
                 <a href="#about">About</a>
