--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -11,8 +11,9 @@
 <body>
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">
-                <div class="logo">
+    <div class="logo">
+      <img src="Main/UnvaxxedSPRM/Images/logo.svg" alt="Unvaxxed $SPRM Logo" width="100" height="100">
+    </div>
       
     </div>
             </div>
