--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav-container">
     <div class="logo">
-      <img src="Main/UnvaxxedSPRM/Images/logo.png" alt="Unvaxxed $SPRM Logo" width="100" height="100">
+      <img src="logo.png" alt="Website Logo" width="100" height="100">
     </div>
       
     </div>
