--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -79,7 +79,13 @@
                 </div>
             </div>
         </section>
+        <section class="funny-section">
+            <h2>What does it all MEME?</h2>
+            <p>We’re not just making a meme, we’re making a statement.  Realtalk, whether you knew 2020 was a psyop or you’re waking up to it now, 
+saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier, healthier humanity. Let’s unite and prosper!
+</p>
 
+        </section>
         <section class="funny-section">
             <h2>Our goal is to unvax people not simply speak to the unvaxxed</h2>
             <p>We are here to provide humanity with the tools to unvax the countless people who were lied to, manipulated and coerced. This is about unvaxxing yourself, about detoxing your vessel so purity can emerge.</p>
