--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -121,7 +121,7 @@ saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier
         </section>
 
         <section class="funny-section">
-          <img src="https://i.imgur.com/kvMpajQ.png" alt="Meme3" class="meme" style="display: block; margin: 10px auto; text-align: center;">
+<img src="https://i.imgur.com/kvMpajQ.png" alt="Meme3" id="large-meme" class="meme">
             <h2>Who said we can't have fun while saving the world?</h2>
             <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
             <div class="capsules">
