--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -87,7 +87,7 @@ saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier
 
         </section>
         <section class="funny-section">
-            <h2>Our goal is to unvax humanity</h2>
+            <h2>OUR GOAL IS TO UNVAX HUMANITY</h2>
             <p>We are here to provide humanity with the tools to unvax the countless people who were lied to, manipulated and coerced. This is about unvaxxing yourself, about detoxing your vessel so purity can emerge.</p>
             <div class="tokenomics-grid">
                 <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: first come, first served."</p></div>
