--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -187,7 +188,7 @@ saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier
 <section id="Buy" class="Buy">
     <h2>How to Buy</h2>
     <ol>
-        <li>Download Phantom Wallet: This is where your $SPRM lives. Think of it as the ultimate fertility bank, but digital. 🏦</li>
+        <li>Download Phantom Wallet: This is where your $SPRM lives. Think of this as your ultimate $SPRM bank, but digital 🏦</li>
         <li>Save your recovery phrase: Seriously, don’t lose it, share it, or let it fall into the wrong hands. This is your seed of sovereignty. PROTECT IT AT ALL COSTS. 🛡</li>
         <li>Load up on Solana: No Sol? No $SPRM. Send some from another exchange or buy directly in the app. 💸</li>
         <li>When the Genesis Drop begins, connect your wallet to the pump.fun link shared in the livestream, Telegram, and X.</li>
