--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -80,6 +80,13 @@
                 </div>
             </div>
         </section>
+        <section id="video-section" class="video-section">
+    <h2>The $SPRM theme song!</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8CPgDOkc-Vg?si=Wc2rbsVsVAPuMKuq" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+        encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen></iframe>
+</section>
         <section class="funny-section">
             <h2>What does it all MEME?</h2>
             <p>We’re not just making a meme, we’re making a statement.  Realtalk, whether you knew 2020 was a psyop or you’re waking up to it now, 
