--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -82,10 +82,7 @@
         </section>
         <section id="video-section" class="video-section">
     <h2>The $SPRM theme song!</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/8CPgDOkc-Vg?si=Wc2rbsVsVAPuMKuq" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-        encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen></iframe>
+     <iframe width="1120" height="630" src="https://www.youtube.com/embed/t2GbaxOrbNs?si=fX7Vy_-8-8DHDAIn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
         <section class="funny-section">
             <h2>What does it all MEME?</h2>
