--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -94,11 +94,10 @@ saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier
         <section class="funny-section">
             <h2>OUR GOAL IS TO UNVAX HUMANITY</h2>
             <p>We are here to provide humanity with the tools to unvax the countless people who were lied to, manipulated and coerced. This is about unvaxxing yourself, about detoxing your vessel so purity can emerge.</p>
-            <div class="tokenomics-grid">
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM: first come, first served."</p></div>
-                <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>"Unvaxxed $SPRM…a whole new way to make it rain"</p></div>
-                  </div>    
-                <img src="https://i.imgur.com/sgH4XsO.png" alt="Meme11" class="meme" style="display: block; margin: 10px auto; text-align: center;">
+           <p class="capsule alternate">"Unvaxxed $SPRM: first come, first served."</p>
+            <img src="https://i.imgur.com/sgH4XsO.png" alt="Meme11" class="meme" style="display: block; margin: 10px auto; text-align: center;">
+<p class="capsule">"Unvaxxed $SPRM…a whole new way to make it rain"</p>
+                
                       
              <div class="tokenomics-grid">
                 <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>Unvaxxed $SPRM = Be fertile, not futile"</p></div>
