--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -94,10 +94,11 @@ saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier
         <section class="funny-section">
             <h2>OUR GOAL IS TO UNVAX HUMANITY</h2>
             <p>We are here to provide humanity with the tools to unvax the countless people who were lied to, manipulated and coerced. This is about unvaxxing yourself, about detoxing your vessel so purity can emerge.</p>
-           <p class="capsule alternate">"Unvaxxed $SPRM: first come, first served."</p>
+         <div class="capsules">
+            <p class="capsule alternate">"Unvaxxed $SPRM: first come, first served."</p>
             <img src="https://i.imgur.com/sgH4XsO.png" alt="Meme11" class="meme" style="display: block; margin: 10px auto; text-align: center;">
 <p class="capsule">"Unvaxxed $SPRM…a whole new way to make it rain"</p>
-                
+         </div>       
                       
              <div class="tokenomics-grid">
                 <div class="tokenomics-item"><i class="fas fa-quote-left"></i><p>Unvaxxed $SPRM = Be fertile, not futile"</p></div>
@@ -203,7 +204,8 @@ saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier
     <a href="https://phantom.com/download" class="social-button cta-primary" style="background: #800080; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Phantom</a>
     <a href="https://t.me/BullxBetaBot?start=access_6TD0R5G5EMC:same" class="social-button cta-primary" style="background: #00FF00; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Bullx</a>
 </div>
-<img src="https://imgur.com/35Ituog" alt="Buy Now" id="large-meme" class="meme">
+<img src="https://i.imgur.com/35Ituog.jpeg" alt="How to Buy" id="large-meme" class="meme">
+ 
 
 
     <div class="capsules">
