--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -204,7 +204,7 @@ saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier
     <a href="https://phantom.com/download" class="social-button cta-primary" style="background: #800080; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Phantom</a>
     <a href="https://t.me/BullxBetaBot?start=access_6TD0R5G5EMC:same" class="social-button cta-primary" style="background: #00FF00; padding: 5px 15px; font-size: 0.9rem; width: auto; text-align: center;">Get Bullx</a>
 </div>
-<img src="https://i.imgur.com/35Ituog.jpeg" alt="How to Buy" id="large-meme" class="meme">
+<img src="https://i.imgur.com/35Ituog.jpeg" alt="How to Buy" class="meme">
  
 
 
