--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <nav class="nav-container">
     <div class="logo">
-      <img src="logo.png" alt="Website Logo" width="100" height="100">
+      <img src="logo.png" alt="Website Logo" width="100" height="100" style="opacity: 0.1;">
     </div>
       
     </div>
