--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -86,7 +86,7 @@
         <section class="funny-section">
             <h2>What does it all MEME?</h2>
             <p>We’re not just making a meme, we’re making a statement.  Realtalk, whether you knew 2020 was a psyop or you’re waking up to it now, 
-saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier, healthier humanity. Let’s unite and prosper!
+saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier, healthier humanity. Let’s unite and prosper! UNVAXX is our way of reclaiming that word that was used negatively and we are now empowering it to mean ‘detoxing.
 </p>
 
         </section>
