--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -86,10 +86,13 @@
 </section>
         <section class="funny-section">
             <h2>What does it all MEME?</h2>
-            <p>We’re not just making a meme, we’re making a statement.  Realtalk, whether you knew 2020 was a psyop or you’re waking up to it now, 
-saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier, healthier humanity. Let’s unite and prosper! 
-UNVAXX is our way of reclaiming that word that was used negatively and we are now empowering it to mean ‘detoxing.
-As people were all in this together. It’s us vs. the corrupt corporate interests.
+            <p> We’re not just making a meme, we’re making a statement. Realtalk: whether you knew 2020 was a psyop then or you’re waking up to that now, saying you’re holding onto Unvaxxed $SPRM is your way of siding with a happier, healthier humanity. 
+
+This isn’t divide and conquer (there’s enough of that low vibe out there). Instead we’re here to unite and prosper! 
+
+UNVAXX is our way of reclaiming that word that was used negatively and here we mean to empower it and flip it to mean to ‘detox’ and to ‘purify’, which everyone can do. 
+
+As people were all in this together. It’s us (humanity) vs. the corrupt corporate interests.
 </p>
 
         </section>
