--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -224,9 +224,89 @@ As people were all in this together. It’s us (humanity) vs. the corrupt corpor
 
 <section id="detox-protocol" class="detox-protocol">
     <h2>Detox Protocol</h2>
-    <p>The first step is to HOLD $SPRM. Simply by hodling $SPRM, you are receiving the quantum healing frequencies that were activated upon the token creation to purify all the holders from vax-related toxins. Like a subscription to a permanent energetic hospital. This is why our $SPRM will always win the race.</p>
-    <p>Next step is TBD as we accumulate data on the best protocols out there. Have a suggestion? Make sure to leave it in the Telegram!</p>    
+    <p class="disclaimer">
+        This information is a total joke, please DO NOT FOLLOW ANY OF THE RECOMMENDATIONS HERE! None of this has been evaluated by all the wonderful world agencies that totally do have your best interest at heart and want you to heal and thrive. For information and entertainment purposes only!
+    </p>
+    <div class="detox-steps">
+        <div class="step capsule alternate">
+            Step 1: Buy and hold UNVAXXED $SPRM
+        </div>
+        <p class="step-explanation">
+This is a crucial step. Really. This token was created with a powerful intention to provide healing to all those who have it. The collective intention of purity is infused in the very fabric of this token. So holding it makes you already the beneficiary of
+ healing energy. We may or may not have a powerful team of quantum energy healers making sure this is true. Wink wink. $SPRM!!!        </p>
+        <div class="step capsule">
+            Step 2: WATCH YOUR MIND AND THOUGHTS
+        </div>
+        <p class="step-explanation">
+           You must realize that you have the power of healing within you. There is NOTHING that is too much for you to heal from. So rid yourself of the belief that your body has been permanently altered. You can heal from anything. You have to trust this with every fiber of your being, 
+even when current circumstances seem to indicate otherwise. YOU GOT THIS. Know it. Know it in your heart that healing is not only possible, it is here, now. Vitality, purity, clarity, all of it is there within you. Trust this. 
+        </p>
+        <div class="step capsule alternate">
+            Step 3: Lifestyle
+        </div>
+        <p class="step-explanation">
+Everywhere you look, everybody claims their diet is the best one. Nobody seem to agree except on one aspect. The elimination of toxic, processed food. Whatever diet you choose to follow to detox, this one aspect is going to bring you loads of benefits. 
+        FASTING is another big one. Autophagy has been linked to the processing of the spike protein, and so by fasting you are letting your body recycle the toxic stuff into something beneficial for you. 
+        STRESS:  Stress is truly infamous when it comes to reducing the healing abilities of your body. Do everything you can to aid in relaxation of your body and mind. Be it meditation, prayer, singing, dancing, artistic expressions, anything that make your level of stress reduce is going to assist you tremendously. 
+        </p>
+        <div class="step capsule">
+            Step 4: Supplements
+        </div>
+        <p class="step-explanation">
+            Here are the most recommended supplements to aid in the detoxification of the body from harm caused by the shots and its collateral:
+
+            The "cocktail of doom" for the spike protein: 
+            Nattokinase, Serrapeptase, and Bromelain, curcumin, NAC+. The recommended dosage on the label for each. All of these have been shown in studies to break down the Spike Protein, which is responsible for 95% of negative symptoms from this whole thing. 
+            Other things to add:  
+
+Dandelion Root tea;
+Cinnamon;
+Vitamin C;
+Resveratrol;
+Diatomaceous Earth;
+Activated Charcoal;
+Castor Oil packs;
+Quercetin;
+Cayenne Pepper;
+Frankincense and Myrrh essential oils;
+PEMF;
+Chlorine Dioxide (CLO2);
+Wheatgrass juice;
+Pine needle tea;
+Infrared Sauna;
+Biofeedback and bio resonance therapy;
+Trauma Release Exercises and Emotional therapies;
+
+
+Pharmaceuticals which can help (Talk to your doctor)  Ivermectin. EDTA. Parasites and heavy metals detox, respectively. 
+
+Other:  Detox Baths (1 cup Bentonite Clay, 1/2 cup Baking Soda, 1/2 cup Borax, 1 cup Epsom Salt, Essential oils of your choice)
+Getting sunlight, exercise, and quality sleep. (Yes, the very basics haha!)
+
+
+With all of this in place, remembering the most quintessential first step of getting your very own UNVAXXED $SPRM, let's just say that all the nasties won't find your inner temple to be especially hospitable. The power of the golden $SPRM you now hold is going to be too bright, too shiny for them! 
+It's time to DETOX and PURIFY! And of course, all of this was juuuust a joke!
+        </p>
+    </div>
+    <div class="references">
+        <h3>Clinical Approach to Post-acute Sequelae After COVID-19 Infection and Vaccination - Scientific Figure on ResearchGate. Available from: https://www.researchgate.net/figure/Abbreviations-ACE2-angiotensin-converting-enzyme-2-FAT-fatty-acid-translocase_fig1_375814234 [accessed 17 Dec 2024]
+
+Akhter J, Quéromès G, Pillai K, Kepenekian V, Badar S, Mekkawy AH, Frobert E, Valle SJ, Morris DL. The Combination of Bromelain and Acetylcysteine (BromAc) Synergistically Inactivates SARS-CoV-2. Viruses. 2021 Mar 6;13(3):425. doi: 10.3390/v13030425. PMID: 33800932; PMCID: PMC7999995.
+
+Tanikawa T, Kiba Y, Yu J, Hsu K, Chen S, Ishii A, Yokogawa T, Suzuki R, Inoue Y, Kitamura M. Degradative Effect of Nattokinase on Spike Protein of SARS-CoV-2. _Molecules_. 2022; 27(17):5405. https://doi.org/10.3390/molecules27175405
+
+Matende, N. (2024). _Elimination/Neutralization of COVID-19 Vaccine-Produced Spike Protein: Scoping Review_. Mathews Journal of Nutrition & Dietetics. Retrieved from [Mathews Open Access](https://www.mathewsopenaccess.com/full-text/elimination-neutralization-of-covid-19-vaccine-produced-spike-protein-scoping-review).
+
+Proteolytic Targets for SARS-CoV-2 Spike Protein Degradation: Hope for Systemic Detoxification Anthony M. Kyriakopoulos, M.D., Ph.D. Greg Nigh, N.D. Peter A. McCullough, M.D., M.P.H. Stephanie Seneff, Ph.D.
+
+Halma,  M. T., Marik,  P. E., & Saleeby,  Y. M. (2023). Exploring Autophagy in Treating Spike Protein-related Pathology. Preprints. https://doi.org/10.20944/preprints202306.1903.v1
+</h3>
+   
+    </div>
 </section>
+
+
+        
  <div class="capsules">
         <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
          <img src="https://i.imgur.com/L8B8Dst.jpg" alt="Meme1" class="meme"style="display: block; margin: 10px auto; text-align: center;">
